# bottec_admin

./: .env_docker_example  .env_example  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml
adminpanel/: asgi.py  settings.py  urls.py
broadcast/: admin.py  models.py
broadcast/migrations/: 0001_initial.py  0002_alter_broadcastmessage_created_at.py
cart/: admin.py  apps.py  models.py
cart/migrations/: 0001_initial.py  0002_alter_cart_options_alter_cartitem_options.py  0003_alter_cart_user_alter_cartitem_cart_and_more.py
catalog/: admin.py  models.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options.py  0003_alter_category_parent_alter_category_slug_and_more.py
chats/: admin.py  apps.py  models.py
chats/migrations/: 0001_initial.py  0002_rename_name_requiredchat_title_and_more.py  0003_remove_requiredchat_url_alter_requiredchat_chat_id_and_more.py  0004_faq.py
orders/: admin.py  models.py
orders/migrations/: 0001_initial.py
users/: admin.py  apps.py  models.py
users/migrations/: 0001_initial.py  0002_remove_telegramuser_is_subscribed_channel_and_more.py
utils/: image_path.py
